--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "Markdown-nice-for-wechat",
+	"name": "Markdown nice for wechat",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Markdown nice for wechat.",
+	"author": "Allen Xing",
+	"authorUrl": "https://blog.allenxing.club",
+	"fundingUrl": "https://www.buymeacoffee.com/allenxing",
+	"isDesktopOnly": true
 }
