--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "markdown-nice-for-wechat-plugin",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "This is a markdown nice for wechat plugin for Obsidian (https://obsidian.md)",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,7 +9,7 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "allenxing",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
@@ -20,5 +20,16 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"highlight.js": "^11.9.0",
+		"juice": "^9.1.0",
+		"markdown-it": "^13.0.2",
+		"markdown-it-deflist": "^2.1.0",
+		"markdown-it-footnote": "^3.0.3",
+		"markdown-it-implicit-figures": "^0.12.0",
+		"markdown-it-imsize": "^2.0.1",
+		"markdown-it-ruby": "^0.1.1",
+		"markdown-it-table-of-contents": "^0.6.0"
 	}
 }
